# cover_videogames

./: .gitignore  README.md  data.dvc  environment.yml  pyproject.toml
data/: images.dvc
data/metadata/: games.csv.dvc  games_preprocessed.csv.dvc  genres.csv.dvc  genres_preprocessed.csv.dvc
docs/acceptance/: exit_report.md
docs/business_understanding/: project_charter.md
docs/data/: data_definition.md  data_dictionary.md  data_summary.md
docs/deployment/: deploymentdoc.md  environment.yml
docs/modeling/: baseline_models.md  model_report.md
mlruns/c90e8a06b2a14ec3ac67910a348fe628/artifacts/model/: MLmodel  conda.yaml  python_env.yaml  requirements.txt
mlruns/c90e8a06b2a14ec3ac67910a348fe628/artifacts/model/data/model/: keras_metadata.pb  saved_model.pb
mlruns/c90e8a06b2a14ec3ac67910a348fe628/artifacts/model/data/model/variables/: variables.index
mlruns/models/cover_videogames/: meta.yaml
mlruns/models/cover_videogames/version-1/: meta.yaml
scripts/data_acquisition/: main.py
scripts/eda/: main.py
scripts/preprocessing/: main.py
scripts/training/: data_generator.py  main.py  model.py  test.py
src/cover_videogames/: __init__.py  mlcli.py
src/cover_videogames/database/: get_data.py
src/cover_videogames/evaluation/: main.py
src/cover_videogames/models/: model.py
src/cover_videogames/preprocessing/: main.py
src/cover_videogames/training/: data_generator.py  main.py  test.py
