[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "cover_videogames"
version = "0.1.0"
authors = [{name = "Heiler Santiago Gomez", email = "hsgomezp@unal.edu.co"}]
description = "Clasificación de videojuegos por sus portadas"
requires-python = ">3.8"
dependencies = [
    "numpy",
    "tensorflow",
    "pandas"
]

[tool.setuptools.packages.find]
where = ["src/"]
